force-app/main/default/objects/Country_Code_Master__c/Country_Code_Master__c.object-meta.xml
<CustomObject>
    <label>Country Code Master</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Country Code Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Code Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>