force-app/main/default/objects/Country_Code_Master__c/fields/Mobile_length__c.field-meta.xml
<CustomField>
    <fullName>Mobile_length__c</fullName>
    <label>Mobile length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>