force-app/main/default/objects/Country_Code_Master__c/fields/Phone_length__c.field-meta.xml
<CustomField>
    <fullName>Phone_length__c</fullName>
    <label>Phone length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>